Added basic functions

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,6 +1,6 @@
 
 #HeroIMG{
-    background-image: url('/public/home/heroIMG.jpg');
+    background-image: url('/home/heroIMG.jpg');
 }
 
 .SeventyWidth{
