--- a/src/utils/SearchBar/SearchBarStyle.scss
+++ b/src/utils/SearchBar/SearchBarStyle.scss
@@ -10,7 +10,7 @@
         li{
             background: #f3f3f3;
             margin: 0 0.5rem;
-            padding: 1rem 1rem 0.7rem;
+            padding: 1rem 2rem;
             border-radius: 1rem 1rem 0 0rem;
             border-bottom: 1px solid #f3f3f3;
             &.active{
