--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,9 @@
     &.justify{
         justify-content: space-between;
     }
+    &.justify-center{
+        justify-content: center;
+    }
     &.flex-h{
         flex-direction: column;
     }
