--- a/src/components/RegionList/RegionListStyle.scss
+++ b/src/components/RegionList/RegionListStyle.scss
@@ -15,15 +15,21 @@
             aspect-ratio: 1/1;
             border-radius: 1rem;
             margin-bottom: 1rem;
+            overflow: hidden;
 
-            background-repeat: no-repeat;
-            background-position: center;
-            background-size: cover;
-            transition: all .1s ease-in;
+
+            .borderRelative{
+                width: 100%;
+                height: 100%;
+                background-repeat: no-repeat;
+                background-position: center;
+                background-size: cover;
+                transition: all .3s ease-in-out;
+            }
         }
         &:hover{
-            .border{
-                transform: scale(1.03);
+            .borderRelative{
+                transform: scale(1.1) rotate(-3deg);
                 
             }
         }
@@ -37,6 +43,7 @@
     border-radius: 100%;
     position: absolute;
     top: 40%;
+    user-select: none;
     cursor: pointer;
     z-index: 2;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
