--- a/src/components/RecentArticles/RecentArticlesStyle.scss
+++ b/src/components/RecentArticles/RecentArticlesStyle.scss
@@ -19,6 +19,10 @@
     *:not(.articleIMG){
         margin-left: 2rem;
     }
+    transition: all .3s ease-in-out;
+    &:hover{
+        transform: scale(1.02);
+    }
     .articleIMG{
         width: 100%;
         height: 10rem;
