--- a/src/components/DownloadSection/DownloadSectionStyle.scss
+++ b/src/components/DownloadSection/DownloadSectionStyle.scss
@@ -11,3 +11,14 @@
     max-width: 50%;
     margin-top: 1rem;
 }
+
+
+/* Small devices (laptops/desktops, 992px and down) */
+@media only screen and (max-width: 1224px) {
+    #appMock{
+        max-width: 50%;
+        margin-left: 0;
+        margin-top: 3rem;
+    }
+    
+}
