--- a/src/components/RecentArticles/RecentArticlesStyle.scss
+++ b/src/components/RecentArticles/RecentArticlesStyle.scss
@@ -10,15 +10,13 @@
 }
 
 .article{
-    min-width: 30%;
+    width: 30%;
+    height: 100%;
     border-radius: 1rem;
     overflow: hidden;
     background: #fff;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     text-align: left;
-    *:not(.articleIMG){
-        margin-left: 2rem;
-    }
     transition: all .3s ease-in-out;
     &:hover{
         transform: scale(1.02);
@@ -30,7 +28,10 @@
         background-position: center;
         background-size: cover;
     }
-    .articleTitle{
+    *:not(.articleIMG){
+        padding: 0 2rem;
+    }
+    .articleTitle:nth-of-type(2){
         font-weight: bold;
     }
 }
