--- a/src/index.scss
+++ b/src/index.scss
@@ -27,3 +27,13 @@ html{
   box-sizing: border-box;
 }
 
+.toShow{
+  transform: translate(0px, 100px);
+  opacity: 0;
+  transition: transform .3s ease-in-out, transform 1s ease, top 1s ease, opacity .3s ease-in-out;
+}
+
+.fade-in {
+  transform: translate(0px, 0px);
+  opacity: 1;
+}
