--- a/src/components/Navbar/NavbarStyle.scss
+++ b/src/components/Navbar/NavbarStyle.scss
@@ -3,8 +3,8 @@
     margin-top: 0;
     font-weight:500;
     img{
-        max-width: 10rem;
-        max-height: 5rem;
+        min-width: 10rem;
+        min-height: 5rem;
     }
 }
 
