--- a/src/index.scss
+++ b/src/index.scss
@@ -3,8 +3,8 @@
 
 :root {
   font-family: 'Poppins', sans-serif;
-  line-height: 1.5;
   font-weight: 400;
+  font-size: 14px;
 
   // color-scheme: light dark;
   // color: rgba(255, 255, 255, 0.87);
@@ -27,6 +27,12 @@ html{
   box-sizing: border-box;
 }
 
+body{
+  margin: 0;
+  position: relative;
+  background: #f6f6f6;
+}
+
 .toShow{
   transform: translate(0px, 100px);
   opacity: 0;
@@ -36,4 +42,46 @@ html{
 .fade-in {
   transform: translate(0px, 0px);
   opacity: 1;
+}
+
+
+h1{
+  margin: 0;
+  font-size: 6rem;
+  line-height: 6rem;
+  font-weight: 600;
+}
+h2{
+  margin: 0;
+}
+
+.thin{
+  font-weight: 300;
+  font-style: italic;
+  margin: 0;
+}
+
+.bold{
+  font-weight: bold;
+}
+
+.text-smaller{
+    font-size: 1.6rem;
+    line-height: 1.6rem;
+}
+.text-small{
+  font-size: 2rem;
+}
+.text-medium{
+  font-size: 3rem;
+}
+.text-large{
+  font-size: 4rem;
+}
+
+section{
+  min-height: 100vh;
+  width: 100%;
+  padding: 15rem 0;
+  position: relative;
 }
