--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,31 +1,74 @@
-
-#HeroIMG{
-    background-image: url('/home/heroIMG.jpg');
-    min-height: 60vh;
+#Hero{
+    background: url('/public/pages/home/hero-bg-darker.jpeg');
+    background-size: cover;
+    background-position: center left;
 }
 
-.SeventyWidth{
-    max-width: 70%;
-    height: 100%;
+#cardsHero{
+    position: absolute;
+    right: 0;
+    bottom: 5rem;
+    min-height: 10rem;
+    min-width: 30rem;
     margin: 0 5rem;
+    .cards{
+        width: 25rem;
+        height: 9rem;
+        border-radius: 1rem;
+        margin: 0 1rem;
+        background: #e7e7e7ea;
+        overflow: hidden;
+        transition: all .3s ease-in-out;
+        cursor: pointer;
+        &:hover{
+            transform: scale(1.02);
+        }
+        img{
+            height: 100%;
+            aspect-ratio: 1/1;
+        }
+        .full{
+            margin: auto;
+            padding: 0 2rem;
+            p{
+                margin: 0;
+            }
+        }
+
+    }
+    
 }
 
-/* Small devices (laptops/desktops, 992px and down) */
-@media only screen and (max-width: 1224px) {
-    #HeroIMG{
-        display: flex;
-        align-items: center;
-        background-image:none;
-        min-height: unset;
-        .onlyMobile{
-            max-width: 80%;
-            margin: 0 auto 3rem;
-        }
+
+
+#prices{
+    h2, p{
+        margin: 0;
     }
-    .SeventyWidth{
+    #cardPrices{
+        margin-top: 5rem;
         width: 100%;
-        height: 100%;
-        max-width: unset;
-        margin: 3rem auto;
+        display: grid;
+        grid-auto-flow: column;
+        justify-content: center;
+        gap: 3%;
+        .card{
+            width: 20rem;
+            height: 100%;
+            background: #fff;
+            border-radius: 2rem;
+            overflow: hidden;
+            .cardText{
+                padding: 2rem;
+            }
+
+            .illustration{
+                width: 100%;
+                height: 20rem;
+                background-size: cover;
+                background-position: center;
+            }
+            
+        }
     }
 }
