--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Rubik', sans-serif;
   font-weight: 400;
   font-size: 14px;
 
@@ -66,14 +65,14 @@ h2{
 }
 
 .text-smaller{
-    font-size: 1.6rem;
-    line-height: 1.6rem;
+    font-size: 1.3rem;
+    line-height: 1.3rem;
 }
 .text-small{
-  font-size: 2rem;
+  font-size: 1.8rem;
 }
 .text-medium{
-  font-size: 3rem;
+  font-size: 2.2rem;
 }
 .text-large{
   font-size: 4rem;
