--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,5 +1,5 @@
 #Hero{
-    background: url('/public/pages/home/hero-bg-darker.jpeg');
+    background: url('/pages/home/hero-bg-darker.jpeg');
     background-size: cover;
     background-position: center left;
 }
@@ -40,35 +40,20 @@
 }
 
 
-
-#prices{
-    h2, p{
-        margin: 0;
+.bandeau{
+    width: 100%;
+    height: 15rem;
+    gap: 3%;
+    position: relative;
+    overflow: hidden;
+    .right{
+        background-image: url('/public/pages/home/bandeau.jpg');
+        background-size: 100%;
+        background-position: center;
     }
-    #cardPrices{
-        margin-top: 5rem;
-        width: 100%;
-        display: grid;
-        grid-auto-flow: column;
-        justify-content: center;
-        gap: 3%;
-        .card{
-            width: 20rem;
-            height: 100%;
-            background: #fff;
-            border-radius: 2rem;
-            overflow: hidden;
-            .cardText{
-                padding: 2rem;
-            }
-
-            .illustration{
-                width: 100%;
-                height: 20rem;
-                background-size: cover;
-                background-position: center;
-            }
-            
+    .left{
+        img{
+            max-height: 80%;;
         }
     }
 }
