--- a/src/components/Home/News/News.scss
+++ b/src/components/Home/News/News.scss
@@ -6,6 +6,7 @@
         grid-auto-flow: column;
         justify-content: center;
         gap: 3%;
+        margin-top: 5rem;
         .card{
             width: 40rem;
         }
