--- a/src/App.scss
+++ b/src/App.scss
@@ -87,7 +87,7 @@ a{
     width: fit-content;
     font-weight: bold;
     border-radius: 2rem;
-    background: #01a9f2;
+    background: #01aaf2d2;
     color: #fff;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
     transition: all .3s ease-in-out;
