--- a/src/App.scss
+++ b/src/App.scss
@@ -48,22 +48,12 @@ a{
     color: black
 }
 
-.fullWidth{
-    padding: 7rem 13rem;
-    background-position: center;
-    background-size: cover;
-    overflow: hidden;
-}
-.halfWidth{
-    width: 60%;
-}
-.fullHeight{
-    height: 100%;
-    border: 1px solid red;
-}
 
 .margin{
     margin: 4rem auto;
+}
+.topMargin{
+    margin: 10rem;;
 }
 
 
@@ -102,6 +92,27 @@ a{
 
 
 
+
+
+.left{
+    width: 40%;
+    height: 100%;
+    background-color: #027cba;
+    position: absolute;
+    z-index: -1;
+    left: 0;
+    top: 0;
+}
+.right{
+    width: 60%;
+    height: 100%;
+    background-color: #027dba0c;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: -1;
+}
+
 .card{
     height: 100%;
     background: #fff;
@@ -124,21 +135,17 @@ a{
     
 }
 
-.left{
-    width: 40%;
-    height: 100%;
-    background-color: #027cba;
-    position: absolute;
-    z-index: -1;
-    left: 0;
-    top: 0;
-}
-.right{
-    width: 60%;
-    height: 100%;
-    background-color: #027dba0c;
-    position: absolute;
-    right: 0;
-    top: 0;
-    z-index: -1;
+
+
+
+@media (max-width: 700px) {
+    .notOnMobile{
+        display:none;
+    }
+    body{
+        text-align: center;
+    }
+    .button{
+        margin: 3rem auto 0;
+    }
 }
