--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -61,3 +61,12 @@
 .Instagram{background-color:#A1755C;}
 .Twitter{background-color:#32CCFE;} 
 .Youtube{background-color:#C52F30;}
+
+
+@media (max-width: 700px) {
+  .footer-basic{
+    .flex:nth-child(2){
+      flex-direction: column;
+    }
+  }
+}
