--- a/src/components/Home/News/News.scss
+++ b/src/components/Home/News/News.scss
@@ -1,14 +1,24 @@
 #news{
     #cardNews{
-        width: 80%;
-        margin: auto;
+        width: 100%;
         display: grid;
-        grid-auto-flow: column;
+        margin: 5rem auto 0;
+        grid-template-columns: repeat(auto-fit, minmax(min(40rem, 100%), 5rem));
         justify-content: center;
         gap: 3%;
-        margin-top: 5rem;
         .card{
             width: 40rem;
+        }
+    }
+}
+
+@media (max-width: 700px) {
+    #news{
+        #cardNews{
+            .card{
+                width: 80%;
+                margin: auto;
+            }
         }
     }
 }
