--- a/src/components/Home/Pricing/Pricing.scss
+++ b/src/components/Home/Pricing/Pricing.scss
@@ -3,14 +3,29 @@
         margin: 0;
     }
     #cardPrices{
-        margin-top: 5rem;
-        width: 100%;
+        margin: 5rem auto 0;
         display: grid;
-        grid-auto-flow: column;
+        grid-template-columns: repeat(auto-fill, minmax(min(20rem, 100%), 5rem));
         justify-content: center;
-        gap: 3%;
-        .card{
-            width: 20rem;
+        max-width: 1200px;
+        gap: 1rem;
+        
+    }
+}
+
+
+@media (max-width: 700px) {
+    #prices{
+        #cardPrices{
+            .card{
+
+            
+                .illustration{
+                    height: 10rem;
+                }
+                
+            }
         }
     }
 }
+
