--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -2,6 +2,10 @@
     background: url('/pages/home/hero-bg-darker.jpeg');
     background-size: cover;
     background-position: center left;
+    padding: 7rem 13rem;
+    background-position: center;
+    background-size: cover;
+    overflow: hidden;
 }
 
 #cardsHero{
@@ -55,5 +59,12 @@
         img{
             max-height: 50%;;
         }
+    }
+}
+
+
+@media (max-width: 700px) {
+    #Hero{
+        padding: 7rem 1rem;
     }
 }
