--- a/src/pages/GolfList/GolfList.scss
+++ b/src/pages/GolfList/GolfList.scss
@@ -1,9 +1,12 @@
 #golfContainer{
     width: 100%;
     gap: 3rem;
+    padding: 0 2rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(min(20rem, 100%), 1fr));
     
     .golfCard{
-        width: 20%;
+        width: 100%;
         border-radius: 1rem;
         box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
         height: fit-content;
@@ -31,6 +34,7 @@
 
 input {
     height: 5rem;
+    min-width: 25rem;
     width: 50%;
     border: 0;
     color: #2f2f2f;
