--- a/src/App.scss
+++ b/src/App.scss
@@ -79,7 +79,7 @@ a{
     border-radius: 2rem;
     background: #01aaf2d2;
     color: #fff;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15);
     transition: all .3s ease-in-out;
     &:hover{
         transform: scale(1.04);
@@ -114,6 +114,7 @@ a{
 }
 
 .card{
+    position: relative;
     height: 100%;
     background: #fff;
     border-radius: 2rem;
@@ -121,6 +122,7 @@ a{
     transition: all .3s ease-in-out;
     &:hover{
         transform: scale(1.02);
+        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15);
     }
     .cardText{
         padding: 2rem;
@@ -135,12 +137,17 @@ a{
     
 }
 
-
+.onMobile{
+    display:none;
+}
 
 
 @media (max-width: 700px) {
     .notOnMobile{
         display:none;
+    }
+    .onMobile{
+        display:flex;
     }
     body{
         text-align: center;
