--- a/src/index.scss
+++ b/src/index.scss
@@ -54,6 +54,12 @@ h2{
   margin: 0;
 }
 
+h3{
+  font-size: 2rem;
+  line-height: 2rem;
+  font-weight: 600;
+}
+
 .thin{
   font-weight: 300;
   font-style: italic;
