--- a/src/pages/GolfList/GolfList.scss
+++ b/src/pages/GolfList/GolfList.scss
@@ -3,10 +3,13 @@
     gap: 3rem;
     padding: 0 2rem;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(min(20rem, 100%), 1fr));
-    
+    grid-template-columns: repeat(auto-fit, minmax(min(20rem, 100%), 1fr));
+    justify-items: center;
+    align-items: center;
     .golfCard{
         width: 100%;
+        min-width: 20rem;
+        max-width: 25rem;
         border-radius: 1rem;
         box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
         height: fit-content;
@@ -32,7 +35,7 @@
     }
 }
 
-input {
+#search {
     height: 5rem;
     min-width: 25rem;
     width: 50%;
@@ -41,7 +44,7 @@ input {
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     font-size: 1.8rem;
   }
-  input[type="search"] {
+  #search[type="search"] {
     outline: 0; // <-- shold probably remove this for better accessibility, adding for demo aesthetics for now.
     background: #fff;
     padding: 0 1.6rem;
