--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -51,7 +51,7 @@
     position: relative;
     overflow: hidden;
     .right{
-        background-image: url('/public/pages/home/bandeau.jpg');
+        background-image: url('/pages/home/bandeau.jpg');
         background-size: 100%;
         background-position: center;
     }
@@ -66,5 +66,11 @@
 @media (max-width: 700px) {
     #Hero{
         padding: 7rem 1rem;
+    }
+    .bandeau{
+        .right{
+            width: 100%;
+            background-size: 200%;
+        }
     }
 }
