Bunch of updates ; graphics & bug correcting

--- a/src/App.scss
+++ b/src/App.scss
@@ -147,7 +147,7 @@ a{
         display:none;
     }
     .onMobile{
-        display:flex;
+        display:block;
     }
     body{
         text-align: center;
