--- a/src/index.scss
+++ b/src/index.scss
@@ -20,6 +20,8 @@
 
 html{
   scroll-behavior: smooth;
+  overflow-x: hidden;
+  max-width: 100vw;
 }
 
 *, ::after, ::before {
@@ -30,6 +32,8 @@ body{
   margin: 0;
   position: relative;
   background: #f6f6f6;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 .toShow{
@@ -46,8 +50,8 @@ body{
 
 h1{
   margin: 0;
-  font-size: 6rem;
-  line-height: 6rem;
+  font-size: 4rem;
+  line-height: 4rem;
   font-weight: 600;
 }
 h2{
@@ -86,7 +90,8 @@ h3{
 
 section{
   min-height: 100vh;
-  width: 100%;
+  width: 100vw;
+  max-width: 100vw;
   padding: 15rem 0;
   position: relative;
 }
