--- a/src/pages/GolfList/GolfList.scss
+++ b/src/pages/GolfList/GolfList.scss
@@ -1,7 +1,7 @@
 #golfContainer{
     width: 100%;
     gap: 3rem;
-    padding: 0 2rem;
+    padding: 0 10rem;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(min(20rem, 100%), 1fr));
     justify-items: center;
@@ -13,6 +13,10 @@
         border-radius: 1rem;
         box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
         height: fit-content;
+        transition: all .3s ease-in-out;
+        &:hover{
+            transform: scale(1.1);
+        }
     }
     .golfImageContainer{
         width: 100%;
@@ -35,22 +39,43 @@
     }
 }
 
-#search {
-    height: 5rem;
-    min-width: 25rem;
-    width: 50%;
-    border: 0;
-    color: #2f2f2f;
+
+
+.topBanner{
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    font-size: 1.8rem;
-  }
-  #search[type="search"] {
-    outline: 0; // <-- shold probably remove this for better accessibility, adding for demo aesthetics for now.
+    width: 70%;
+    margin: auto;
     background: #fff;
-    padding: 0 1.6rem;
-    border-radius: .7rem;
-    appearance: none; //for iOS input[type="search"] roundedness issue. border-radius alone doesn't work
-    transition: all .3s cubic-bezier(0, 0, 0.43, 1.49);
-    z-index: 1;
+    height: fit-content;
+    margin-bottom: 3rem;
+    padding: 5rem 0 3rem;
+    border-radius: 1rem;
     position: relative;
-  }
+    #search {
+        position: absolute;
+        bottom: -2rem;
+        height: 5rem;
+        min-width: 25rem;
+        width: 50%;
+        border: 0;
+        color: #2f2f2f;
+        box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+        font-size: 1.8rem;
+      }
+      #search[type="search"] {
+        outline: 0; // <-- shold probably remove this for better accessibility, adding for demo aesthetics for now.
+        background: #fff;
+        padding: 0 1.6rem;
+        border-radius: .7rem;
+        appearance: none; //for iOS input[type="search"] roundedness issue. border-radius alone doesn't work
+        transition: all .3s cubic-bezier(0, 0, 0.43, 1.49);
+        z-index: 1;
+      }
+}
+
+
+@media (max-width: 700px) {
+    .topBanner{
+        width: 100%;
+    }
+}
