--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -6,6 +6,13 @@
     background-position: center;
     background-size: cover;
     overflow: hidden;
+    h1{
+        font-size: 6rem;
+        line-height: 6rem;
+    }
+    .halfWidth{
+        max-width: 50%;
+    }
 }
 
 #cardsHero{
@@ -13,10 +20,9 @@
     right: 0;
     bottom: 5rem;
     min-height: 10rem;
-    min-width: 30rem;
     margin: 0 5rem;
     .cards{
-        width: 25rem;
+        max-width: 25rem;
         height: 9rem;
         border-radius: 1rem;
         margin: 0 1rem;
@@ -62,10 +68,27 @@
     }
 }
 
+@media (max-width: 1000px) {
+    #cardsHero{
+        display: none;
+    }
+}
 
 @media (max-width: 700px) {
     #Hero{
         padding: 7rem 1rem;
+        text-align: center;
+        p{
+            margin: 1rem auto;
+        }
+        .halfWidth{
+        max-width: 90%;
+        margin: auto;
+        }
+        h1{
+        font-size: 4rem;
+        line-height: 4rem;
+    }
     }
     .bandeau{
         .right{
