--- a/src/components/Navbar/NavbarStyle.scss
+++ b/src/components/Navbar/NavbarStyle.scss
@@ -91,6 +91,19 @@ color: #18272F;
   }
 }
 
+.close{
+  display: none;
+  svg{
+    font-size: 3rem !important;
+    padding: 0.6rem;
+    border: 2px solid #000;
+    width: 3rem;
+    height: 3rem;
+    border-radius: 100%;
+  }
+  
+}
+
 @media (max-width: 1200px) {
 
   .navbar{
@@ -149,6 +162,10 @@ color: #18272F;
   }
   .mainLogo{
     width: 15rem;
+  }
+
+  .close{
+    display: block;
   }
 
 }
