--- a/src/index.scss
+++ b/src/index.scss
@@ -95,3 +95,11 @@ section{
   padding: 15rem 0;
   position: relative;
 }
+
+
+@media (max-width: 1400px) {
+  :root{
+    font-size: 12px;
+  }
+}
+
