--- a/src/components/Home/About/About.scss
+++ b/src/components/Home/About/About.scss
@@ -1,6 +1,10 @@
 #About{
     min-height: 50vh;
     padding: 10rem 0;
+    .text-smaller{
+        margin: 1rem auto 0;
+        width: 80%;
+    }
     #aboutIcons{
         gap: 5%;
         width: 100%;
@@ -8,7 +12,7 @@
         .element{
             svg{
                 width: 8rem;
-                height: auto;;
+                height: auto;
             }
         }
     }
